--- a/Proyecto de  Aula #1/Proyecto de  Aula #1.csproj
+++ b/Proyecto de  Aula #1/Proyecto de  Aula #1.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calcular.cs" />
+    <Compile Include="GestionCliente.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
