--- a/Proyecto de  Aula #1/Proyecto de  Aula #1.csproj
+++ b/Proyecto de  Aula #1/Proyecto de  Aula #1.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calcular.cs" />
+    <Compile Include="EstadisticasCliente.cs" />
     <Compile Include="GestionCliente.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Program.cs" />
